--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -1,11 +1,13 @@
 Name:           monadLib
 Version:        3.0.0
 License:        BSD3
+License-file:   LICENSE
 Author:         Iavor S. Diatchki
 Maintainer:     diatchki@csee.ogi.edu
 Homepage:       http://www.csee.ogi.edu/~diacthki/monadLib
 Category:       Monads
 Synopsis:       A collection of monad transformers.
+Description:    A collection of monad transformers.
 hs-source-dirs: src
 Build-Depends:  base
 Extra-source-files: LICENSE README
