Haddock '->@ tweaks.  Modules alone in .cabal lines.
darcs-hash:20070114023345-fb517-a654ac7d2ef59ca362e26a8f712d8f00484d705e.gz

--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -11,7 +11,9 @@ Description:    A collection of monad transformers.
 hs-source-dirs: src
 Build-Depends:  base
 Extra-source-files: LICENSE README
-Exposed-modules: MonadLib Monads
+Exposed-modules: 
+                 MonadLib
+                 Monads
 Extensions:     
   MultiParamTypeClasses, FunctionalDependencies, PolymorphicComponents 
 GHC-options:    -O2 -W -fallow-undecidable-instances
