we don't use poly components now
darcs-hash:20070115203146-5035a-d2f68fa7c43c9a3f7a2babf4bf3d84a4c012483a.gz

--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -15,6 +15,6 @@ Exposed-modules:
                  MonadLib
                  Monads
 Extensions:     
-  MultiParamTypeClasses, FunctionalDependencies, PolymorphicComponents 
+  MultiParamTypeClasses, FunctionalDependencies
 GHC-options:    -O2 -W -fallow-undecidable-instances
 
