--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -1,9 +1,9 @@
 Name:           monadLib
-Version:        3.1.0
+Version:        3.2.0
 License:        BSD3
 License-file:   LICENSE
 Author:         Iavor S. Diatchki
-Maintainer:     diatchki@csee.ogi.edu
+Maintainer:     diatchki@galois.com
 Homepage:       http://www.csee.ogi.edu/~diatchki/monadLib
 Category:       Monads
 Synopsis:       A collection of monad transformers.
@@ -11,10 +11,8 @@ Description:    A collection of monad transformers.
 hs-source-dirs: src
 Build-Depends:  base
 Extra-source-files: LICENSE README
-Exposed-modules: 
-                 MonadLib
-                 Monads
-Extensions:     
+Exposed-modules: MonadLib, Monads
+Extensions:
   MultiParamTypeClasses, FunctionalDependencies
 GHC-options:    -O2 -W -fallow-undecidable-instances
 
