--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -13,6 +13,6 @@ Build-Depends:  base
 Extra-source-files: LICENSE README
 Exposed-modules: MonadLib, Monads
 Extensions:
-  MultiParamTypeClasses, FunctionalDependencies
+  MultiParamTypeClasses, FunctionalDependencies, Rank2Types
 GHC-options:    -O2 -W -fallow-undecidable-instances
 
