--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -10,7 +10,7 @@ Synopsis:       A collection of monad transformers.
 Description:    A collection of monad transformers.
 hs-source-dirs: src
 Build-Depends:  base
-Extra-source-files: LICENSE README
+Extra-source-files: LICENSE README, CHANGES
 Exposed-modules: MonadLib, Monads
 Extensions:
   MultiParamTypeClasses, FunctionalDependencies, Rank2Types
