Change URL in Cabal file
darcs-hash:20070918010741-9637d-2f5e041f19328531a1a67f7e18dac128832ad2f0.gz

--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -4,13 +4,13 @@ License:        BSD3
 License-file:   LICENSE
 Author:         Iavor S. Diatchki
 Maintainer:     diatchki@galois.com
-Homepage:       http://www.csee.ogi.edu/~diatchki/monadLib
+Homepage:       http://www.galois.com/~diatchki/monadLib
 Category:       Monads
 Synopsis:       A collection of monad transformers.
 Description:    A collection of monad transformers.
 hs-source-dirs: src
 Build-Depends:  base
-Extra-source-files: LICENSE README, CHANGES
+Extra-source-files: LICENSE, README, CHANGES
 Exposed-modules: MonadLib, Monads
 Extensions:
   MultiParamTypeClasses, FunctionalDependencies, Rank2Types
