Moves code around.
Split deriving code into a separate module: MonadLib.Deriving.
This makes it possible to use monadLib with implementations that do
not support rank-2 types.

Move 'Monads' to 'MonadLib.Monads' to avoid taking a top-level name.

darcs-hash:20071229011756-9637d-8072dad075a1d3455d77588b9f1184ef69bfaeb3.gz

--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -1,5 +1,5 @@
 Name:           monadLib
-Version:        3.4.2
+Version:        3.4.3
 License:        BSD3
 License-file:   LICENSE
 Author:         Iavor S. Diatchki
@@ -11,7 +11,7 @@ Description:    A collection of monad transformers.
 hs-source-dirs: src
 Build-Depends:  base
 Extra-source-files: LICENSE, README, CHANGES
-Exposed-modules: MonadLib, Monads
+Exposed-modules: MonadLib, MonadLib.Monads, MonadLib.Derive
 Extensions:
   MultiParamTypeClasses, FunctionalDependencies, Rank2Types
 GHC-options:    -O2 -W -fallow-undecidable-instances
