A few documentation tweaks
darcs-hash:20080205054502-9637d-2d3905a926119d56b5dcbe50e89d9bd2f4cd57fb.gz

--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -4,7 +4,7 @@ License:        BSD3
 License-file:   LICENSE
 Author:         Iavor S. Diatchki
 Maintainer:     diatchki@galois.com
-Homepage:       http://www.galois.com/~diatchki/monadLib
+Homepage:       http://www.purely-functional.net/monadLib
 Category:       Monads
 Synopsis:       A collection of monad transformers.
 Description:    A collection of monad transformers.
