--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -10,6 +10,7 @@ Synopsis:       A collection of monad transformers.
 Description:    A collection of monad transformers.
 hs-source-dirs: src
 Build-Depends:  base
+Build-type:     Simple
 Extra-source-files: LICENSE, README, CHANGES
 Exposed-modules: MonadLib, MonadLib.Monads, MonadLib.Derive
 Extensions:
