Change the extensions spec in the cabal file.
The instances in the library are not really undecidable, but the current ghc
version requires the -fallow-undecidable-instances flags (older versions did
not require this flag).  Unfortunatelly, hackage does not allow uploads
of packages with this flag---instead it insists that the option has to be
specified with the UndecidableInstances language extension.  This is wrong,
but until hackage & GHC are fixed we change the cabal specification.

--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -13,7 +13,10 @@ Build-Depends:  base
 Build-type:     Simple
 Extra-source-files: LICENSE, README, CHANGES
 Exposed-modules: MonadLib, MonadLib.Monads, MonadLib.Derive
+
+
 Extensions:
-  MultiParamTypeClasses, FunctionalDependencies, Rank2Types
-GHC-options:    -O2 -W -fallow-undecidable-instances
+  MultiParamTypeClasses, FunctionalDependencies, Rank2Types,
+  UndecidableInstances
+GHC-options:    -O2 -W
 
