--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -8,15 +8,37 @@ Homepage:       http://www.purely-functional.net/monadLib
 Category:       Monads
 Synopsis:       A collection of monad transformers.
 Description:    A collection of monad transformers.
-hs-source-dirs: src
-Build-Depends:  base < 4
 Build-type:     Simple
-Extra-source-files: LICENSE, README, CHANGES
-Exposed-modules: MonadLib, MonadLib.Monads, MonadLib.Derive
+Cabal-version: >= 1.2
+Extra-source-files:
+  LICENSE,
+  README,
+  CHANGES
 
+Flag base3
+  Description: Build for compatability with base3
+  Default:     False
 
-Extensions:
-  MultiParamTypeClasses, FunctionalDependencies, Rank2Types,
-  UndecidableInstances
-GHC-options:    -O2 -W
+Library
+  hs-source-dirs: src
+  Exposed-modules:
+    MonadLib,
+    MonadLib.Monads,
+    MonadLib.Derive
+  Extensions:
+    CPP,
+    MultiParamTypeClasses,
+    FunctionalDependencies,
+    Rank2Types,
+    FlexibleInstances,
+    UndecidableInstances
+
+  if flag(base3)
+    Build-depends: base < 4
+    CPP-options: -DUSE_BASE3
+  else
+    Build-depends: base == 4.*
+
+  GHC-options:    -O2 -Wall
+
 
