--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -31,6 +31,7 @@ Library
     FunctionalDependencies,
     Rank2Types,
     FlexibleInstances,
+    OverlappingInstances,
     UndecidableInstances
 
   if flag(base3)
