--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -4,7 +4,7 @@ License:        BSD3
 License-file:   LICENSE
 Author:         Iavor S. Diatchki
 Maintainer:     diatchki@galois.com
-Homepage:       http://www.purely-functional.net/monadLib
+Homepage:       http://wiki.github.com/yav/monadlib
 Category:       Monads
 Synopsis:       A collection of monad transformers.
 Description:    A collection of monad transformers.
