--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -37,7 +37,7 @@ Library
     Build-depends: base < 4
     CPP-options: -DUSE_BASE3
   else
-    Build-depends: base == 4.*
+    Build-depends: base >= 4 && < 5
 
   GHC-options:    -O2 -Wall
 
