--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -15,7 +15,9 @@ Extra-source-files:
   README,
   CHANGES
 
+
 Library
+  default-language: Haskell2010
   hs-source-dirs: src
   Exposed-modules:
     MonadLib,
