--- a/monadLib.cabal
+++ b/monadLib.cabal
@@ -1,6 +1,7 @@
+cabal-version:  3.0
 Name:           monadLib
 Version:        3.10.1
-License:        BSD3
+License:        ISC
 License-file:   LICENSE
 Author:         Iavor S. Diatchki
 Maintainer:     diatchki@galois.com
@@ -9,7 +10,6 @@ Category:       Monads
 Synopsis:       A collection of monad transformers.
 Description:    A collection of monad transformers.
 Build-type:     Simple
-Cabal-version: >= 2.0
 Extra-source-files:
   LICENSE,
   README,
